--- a/job.css
+++ b/job.css
@@ -559,6 +559,12 @@ body {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 25px;
+    text-decoration: none;
+    color: inherit; /* keeps your original text color */;
+    
+}
+.category-container a:hover {
+    text-decoration: none;
 }
 
 /* Category Box */
@@ -593,6 +599,8 @@ body {
     font-size: 18px;
     color: #333;
     font-weight: 600;
+    cursor: pointer;
+    display: block;
 }
 
 /* Hover Effects */
